Table users {
    id bigint [primary key]
    nick_name varchar(255)
    email varchar(255)
    password varchar(500)

    indexes {
      email [unique]
    }
}

Table user_settings {
    id bigint [primary key]
    user_id bigint [ref: > users.id]
    theme varchar(255)
}

Table cards {
    id bigint [primary key]
    user_id bigint [ref: > users.id]
    group_id bigint [ref: > card_groups.id]
    title varchar(50)
    toggle_state boolean
    created_at bigint
    updated_at bigint
}

Table card_groups {
    id bigint [primary key]
    name varchar(50) 
    color colors
    
    indexes {
      name [unique]
    }
}

Table notes {
    id bigint [primary key]
    card_id bigint [ref: > cards.id] 
    content text
    draft boolean
    timestamp bigint
}

enum colors {
    red 
    green 
    blue
    yellow
}

